# session-recorder

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
src/: main.rs  models.rs  recorder.rs  replayer.rs  storage.rs
tests/: integration_tests.rs
