[package]
name = "session-recorder"
version = "0.1.0"
edition = "2021"
description = "Terminal session recorder and replayer with structured metadata"
license = "MIT"
authors = ["EdgarOrtegaRamirez"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
hostname = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.10", features = ["v4", "serde"] }
whoami = "1.5"

[dev-dependencies]
tempfile = "3.14"

[profile.release]
lto = true
codegen-units = 1
